# pipe-loitering

./: .gitignore  CHANGES.md  CONTRIBUTING.md  Dockerfile  Dockerfile-scheduler  Dockerfile-worker  GITHUB-FLOW.md  MANIFEST.in  Makefile  README.md  cloudbuild.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements-frozen.txt  requirements-scheduler.txt  requirements-test.txt  requirements.txt  run  setup.py
.github/workflows/: main.yml
airflow/: pipe_loitering.py  post_install.sh
cloudbuild/: backend.tf  main.tf
config/: merge.yaml  raw.yaml
examples/: example_merge.txt  example_raw.txt
loitering/: options.py  pipeline.py
loitering/cli/: main.py
loitering/create_raw_loitering/: __init__.py  options.py  pipeline.py
loitering/create_raw_loitering/transforms/: calculate_hourly_stats.py  calculate_loitering_stats.py  group_loitering_ranges.py  read_source.py  window_by_day.py  write_sink.py
loitering/merge_raw_loitering/: __init__.py  aggregate.sql.j2
loitering/transforms/: calculate_hourly_stats.py  calculate_loitering_stats.py  read_source.py  write_sink.py
src/pipe_loitering/: version.py
src/pipe_loitering/cli/: main.py
src/pipe_loitering/cli/commands/: create_raw_loitering.py  merge_raw_loitering.py
src/pipe_loitering/create_raw_loitering/: __init__.py  options.py  pipeline.py
src/pipe_loitering/create_raw_loitering/transforms/: calculate_hourly_stats.py  calculate_loitering_stats.py  group_loitering_ranges.py  read_source.py  window_by_day.py  write_sink.py
src/pipe_loitering/merge_raw_loitering/: __init__.py  aggregate.sql.j2
src/pipe_loitering/utils/: ver.py
tests/create_raw_loitering/transforms/: test_calculate_hourly_stats.py  test_calculate_loitering_stats.py  test_group_loitering_ranges.py
tests/transforms/: test_calculate_hourly_stats.py  test_calculate_loitering_stats.py  test_group_loitering_ranges.py
tests/utils/: test_ver.py
